Apply generic CI workflow